# rust-sketches

./: .gitignore  README.md
macros/: Cargo.toml
macros/src/: core.rs  io.rs  lib.rs  main.rs  syscall.rs
minigrep/: README.md  text.txt
minigrep/src/: lib.rs  main.rs
random/src/: main.rs
servers/: Cargo.toml
servers/restful/: Cargo.toml
servers/restful/actix/: Cargo.toml
servers/restful/actix/example-api-nodb/: Cargo.toml
servers/restful/actix/example-api-nodb/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
servers/restful/actix/example-api-sqlx/: Cargo.toml  README.md  app.mk  cargo.mk  psql.mk  sqlx.mk
servers/restful/actix/example-api-sqlx/migrations/: 20231110065839_INIT.sql  20231110065840_ALTER.sql
servers/restful/actix/example-api-sqlx/src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  settings.rs  state.rs
servers/restful/actix/example-api-sqlx/tests/: person.rs
servers/restful/actix/example-api-sqlx/tests/setup/: mod.rs
servers/restful/axum/hello-axum/: Cargo.toml  Makefile
servers/restful/axum/hello-axum/migrations/: 20231110065839_INIT.sql
servers/restful/axum/hello-axum/mk/: app.mk  cargo.mk  curl.mk  psql.mk  sqlx.mk
servers/restful/axum/hello-axum/src/: app_state.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
servers/restful/axum/hello-axum/tests/: hello.rs
servers/restful/tokio/example-api-nodb/: Cargo.toml
servers/socket-servers/: Cargo.toml
servers/socket-servers/src/: lib.rs
servers/socket-servers/src/thread_pool/: server.rs
servers/tcp/: Cargo.toml
servers/tcp/src/single_thread/: client.rs  server.rs
settings/: Cargo.toml
settings/src/: main.rs  settings.rs
