[package]
name = "example-api-nodb"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true, features = ["derive"]}
env_logger = { workspace = true }
log = { workspace = true }