[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "json", "http1", "matched-path", "original-uri", "tokio", "tower-log", "tracing", "form", "query"]}
serde = { version = "1.0.196", features = ["derive"] }
env_logger = { version = "0.11.2" }
log = { version =  "0.4.20" }
sqlx = { version = "0.7.3" , default_features = false, features = [
    "postgres", "runtime-tokio-native-tls", "macros", "chrono"]}
serde_json = "1.0.113"
[dev-dependencies]
httpc-test = "0.1.9"
reqwest = "0.11.24"
